# pi

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cabal.project  pi.cabal
app/: GPIO.hs  Main.hs  Util.hs
app/Evdev/: Stream.hs
app/George/: Core.hs
app/George/Feed/: GPIO.hs  Keyboard.hs  WebServer.hs
app/Util/: GPIO.hs  Lifx.hs
src/: main.rs
