[package]
name = "pi"
version = "0.1.0"
authors = ["George Thomas <georgefsthomas@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
evdev-rs = "0.4.0"
gpio = "0.4.1"
inotify = "0.8.0"
strum = { version = "0.19", features = ["derive"] }

#TODO higher level, but doesn't have a LAN interface (yet - they are planning on it)
# https://github.com/Aehmlo/lifxi/issues/7
# lifxi = "0.1.1"
lifx-core = "0.2.0"

#TODO use from crates.io when 0.11 released (changes to features, support for rustls)
#TODO work out how to 'allow-older' instead of needing my fork
[dependencies.rspotify]
git = "https://github.com/georgefst/rspotify"
default-features = false
features = ["client-ureq", "ureq-rustls-tls"]
