[package]
name = "pi"
version = "0.1.0"
authors = ["George Thomas <georgefsthomas@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.2.1", features = ["derive"] }
evdev-rs = "0.5.0"
gpio = "0.4.1"
inotify = "0.10.0"
strum = { version = "0.24.1", features = ["derive"] }

#TODO higher level, but doesn't have a LAN interface (yet - they are planning on it)
# https://github.com/Aehmlo/lifxi/issues/7
# lifxi = "0.1.1"
lifx-core = "0.3.1"
get_if_addrs = "0.5.3" # only needed due to low-level-ness of 'lifx-core'
