cabal-version:      3.0
name:               pi
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             George Thomas
maintainer:         georgefsthomas@gmail.com

executable pi
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Evdev.Stream
        George.Core
        George.Feed.GPIO
        George.Feed.Keyboard
        George.Feed.WebServer
        Util
        Util.GPIO
        Util.Lifx
    build-depends:
        base >= 4.16,
        async ^>= 2.2.4,
        binary ^>= 0.8.9,
        bytestring ^>= 0.11,
        containers ^>= 0.6,
        directory ^>= 1.3,
        evdev ^>= 2.2,
        exceptions ^>= 0.10,
        extra ^>= 1.7.10,
        filepath-bytestring ^>= 1.4.2,
        freer-simple ^>= 1.2.1.2,
        hinotify ^>= 0.4.1,
        http-api-data ^>= 0.6,
        http-client ^>= 0.7.11,
        http-types ^>= 0.12.3,
        lifx-lan ^>= 0.8.0,
        logging-effect ^>= 1.4,
        monad-loops ^>= 0.4.3,
        mtl ^>= 2.2,
        network ^>= 3.1.2,
        okapi ^>= 0.1,
        optics ^>= 0.4.2,
        optics-extra ^>= 0.4.2,
        optparse-generic ^>= 1.5,
        pretty-simple ^>= 4.1,
        rawfilepath ^>= 1.0,
        spotify:spotify ^>= 0.1,
        spotify:spotify-servant ^>= 0.1,
        spotify:spotify-types ^>= 0.1,
        streamly ^>= 0.9,
        streamly-core ^>= 0.1,
        streamly-core ^>= 0.1,
        streams ^>= 3.3.2,
        text ^>= 2.0,
        time ^>= 1.12,
        transformers ^>= 0.5,
        wai ^>= 3.2,
        warp ^>= 3.3.28,
    default-language: GHC2021
    default-extensions:
        BlockArguments
        DataKinds
        DeriveAnyClass
        DerivingStrategies
        DuplicateRecordFields
        GADTs
        LambdaCase
        ImpredicativeTypes
        NoFieldSelectors
        OverloadedLabels
        NoMonomorphismRestriction
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        RecordWildCards
        ViewPatterns
    ghc-options:
        -Wall
        -Wredundant-constraints
        -threaded
